third_party/move/move-compiler-v2/tests/reference-safety/bug_13149.no-opt.exp

Diagnostics:
error: cannot write local `r2` since it is borrowed
  ┌─ tests/reference-safety/bug_13149.move:7:9
  │
5 │         let r1 = &mut a;
  │                  ------ previously mutably borrowed here
6 │         let r2 = &mut a;
7 │         *r2 = 2;
  │         ^^^^^^^ write attempted here
8 │         *r1 = 1;
  │         ------- conflicting reference `r1` used here
